build/mysql.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql
subsets:
  - addresses:
    - ip: 192.168.20.212
    ports:
      - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
    - port: 3306
